# Minilang_Compiler

./: README.md
Report/: .gitignore  Main.tex  main.bib
Report/Images/: Q1_StateTransitionDiagram.xml
Report/SubFiles/: Question1.tex  Question2.tex  Question3.tex  Question4.tex  Question5.tex
code/: .gitignore  CMakeLists.txt
code/InputFiles/: .LexerTestInput.txt.swp  LexerTestInput.txt
code/src/: main.cpp
code/src/Helper/: Helper.cpp  Helper.h
code/src/Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
code/src/Parser/: AST.cpp  AST.h  ASTNode.cpp  ASTNode.h  Parser.cpp  Parser.h  TokenManager.cpp  TokenManager.h
code/src/Visitor/: IVisitor.cpp  SAVisitor.cpp  Visitor.h  XMLVisitor.cpp
